--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Not Bored</string>
+    <string name="participants">Participants</string>
+    <string name="start">Start</string>
+    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
 </resources>
