Add RecyclerView & input validation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="participants">Participants</string>
     <string name="start">Start</string>
     <string name="terms_and_conditions"><u>Terms and conditions</u></string>
+    <string name="activity">Activity</string>
 </resources>
