Starting with SuggestionActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
         tempus purus et odio senectus sodales vulputate, ligula malesuada dis habitasse
         nullam pellentesque.
     </string>
+    <string name="example_suggestion">Example suggestion</string>
+    <string name="price">Price</string>
 </resources>
