--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="low">Low</string>
     <string name="high">High</string>
     <string name="_1">1</string>
+    <string name="errorMsg">There was a problem with the request</string>
 </resources>
