--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="high">High</string>
     <string name="_1">1</string>
     <string name="errorMsg">There was a problem with the request</string>
+    <string name="random">Random</string>
 </resources>
