--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="participants">Participants</string>
     <string name="start">Start</string>
     <string name="terms_and_conditions"><u>Terms and conditions</u></string>
+    <string name="terms_and_conditions_activity">Terms and conditions</string>
     <string name="activity">Activity</string>
     <string name="activities">Activities</string>
     <string name="textTermsAndConditions">
